--- a/sandbox/index.html
+++ b/sandbox/index.html
@@ -1,1 +1,63 @@
-
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <title>Attendence Program</title>
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css">
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js"></script>
+  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"></script>
+  <style media="screen">  </style>
+          <style>
+              .title
+              {
+                font-family: 'Playfair Display', serif;
+              }
+              .huge
+              {
+                font-size: 3em;
+              }
+              .pic{
+                width:200px;
+              }
+            </style>
+</head>
+ <body>
+  <div class = "jumbotron" style="height:1000vh;background-color:PaleTurquoise!important;">
+    <div class ="container-fluid">
+      <h2 style="font-size:4em;">Attendence Program</h2>
+      <ul class="nav nav-pills mb-3" id="pills-tab" role="tablist">
+        <li class="nav-item active">
+          <a class="nav-link active" href="file:///Users/admin/Desktop/site/index.html">Home</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="file:///Users/admin/Desktop/site/help.html">Help</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="file:///Users/admin/Desktop/site/sign-in.html">Sign In</a>
+        </li>
+      </ul>
+      <nav class="navbar navbar-expand-sm bg-success nav-pills fixed-top">
+  <ul class="navbar-nav">
+    <li class="nav-item">
+      <a class="nav-link active" href="file:///Users/admin/Desktop/site/index.html">Home</a>
+    </li>
+    <li class="nav-item">
+      <a class="nav-link" href="ile:///Users/admin/Desktop/site/help.html">Help</a>
+    </li>
+    <li class="nav-item">
+      <a class="nav-link" href="file:///Users/admin/Desktop/site/sign-in.html">Sign In</a>
+  </li>
+  </ul>
+</nav>
+    </div>
+<p class="huge"> Take Attendence. </p>
+<img class="pic" src="http://www.mactesting.com/sub_students/photos/attendance2.jpg" alt="Attendence Sheet">
+<p class="huge"> Make Raffles. </p>
+<img class = "pic" src="http://p14cdn4static.sharpschool.com/UserFiles/Servers/Server_1949736/File/20192020/tickets.jpg" alt="huge pile of tickets">
+<p class="huge"> All from your phone. </p>
+<a  href="file:///Users/admin/Desktop/site/sign-in.html" class="btn btn-success huge" role="button">Start now</a>
+  </div>
+ </body>
+</html>
