--- a/sandbox/index.html
+++ b/sandbox/index.html
@@ -32,22 +32,22 @@
           <a class="nav-link active" href="file:///Users/admin/Desktop/site/index.html">Home</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="file:///Users/admin/Desktop/site/help.html">Help</a>
+          <a class="nav-link" href="help.html">Help</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="file:///Users/admin/Desktop/site/sign-in.html">Sign In</a>
+          <a class="nav-link" href="sign-in.html">Sign In</a>
         </li>
       </ul>
       <nav class="navbar navbar-expand-sm bg-success nav-pills fixed-top">
   <ul class="navbar-nav">
     <li class="nav-item">
-      <a class="nav-link active" href="file:///Users/admin/Desktop/site/index.html">Home</a>
+      <a class="nav-link active" href="index.html">Home</a>
     </li>
     <li class="nav-item">
-      <a class="nav-link" href="ile:///Users/admin/Desktop/site/help.html">Help</a>
+      <a class="nav-link" href="help.html">Help</a>
     </li>
     <li class="nav-item">
-      <a class="nav-link" href="file:///Users/admin/Desktop/site/sign-in.html">Sign In</a>
+      <a class="nav-link" href="sign-in.html">Sign In</a>
   </li>
   </ul>
 </nav>
