--- a/sandbox/help.html
+++ b/sandbox/help.html
@@ -15,13 +15,13 @@
       <h2 style="font-size:4em;">Attendence Program</h2>
       <ul class="nav nav-pills mb-3" id="pills-tab" role="tablist">
         <li class="nav-item">
-          <a class="nav-link" href="file:///Users/admin/Desktop/site/index.html">Home</a>
+          <a class="nav-link" href="index.html">Home</a>
         </li>
         <li class="nav-item active">
-          <a class="nav-link active" href="file:///Users/admin/Desktop/site/help.html">Help</a>
+          <a class="nav-link active" href="help.html">Help</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="file:///Users/admin/Desktop/site/sign-in.html">Sign In</a>
+          <a class="nav-link" href="sign-in.html">Sign In</a>
         </li>
       </ul>
     </div>
