--- a/sandbox/sign-in.html
+++ b/sandbox/sign-in.html
@@ -13,7 +13,7 @@
   <div class = "jumbotron"style="height:100vh;background-color:PaleTurquoise !important;">
     <div class="container-fluid">
       <h2 style="font-size:4em;">Attendence Program</h2>
-      <ul class="nav nav-pills mb-3" id="pills-tab" role="tablist">
+      <ul class="navbar navbar-expand-sm bg-success nav-pills fixed-top">
         <li class="nav-item">
           <a class="nav-link" href="index.html">Home</a>
         </li>
