--- a/sandbox/index.html
+++ b/sandbox/index.html
@@ -46,7 +46,7 @@
 <p class="huge"> Make Raffles. </p>
 <img class = "pic" src="http://p14cdn4static.sharpschool.com/UserFiles/Servers/Server_1949736/File/20192020/tickets.jpg" alt="huge pile of tickets">
 <p class="huge"> All from your phone. </p>
-<a  href="file:///Users/admin/Desktop/site/sign-in.html" class="btn btn-success huge" role="button">Start now</a>
+<a  href="sign-in.html" class="btn btn-success huge" role="button">Start now</a>
   </div>
  </body>
 </html>
