--- a/sandbox/sign-in.html
+++ b/sandbox/sign-in.html
@@ -8,6 +8,12 @@
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js"></script>
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"></script>
+  <style>
+    #title
+    {
+      text-align:left;
+    }
+  </style>
 </head>
  <body>
   <div class = "jumbotron"style="height:100vh;background-color:PaleTurquoise !important;">
@@ -24,6 +30,7 @@
           <a class="nav-link active" href="sign-in.html">Sign In</a>
         </li>
       </ul>
+      <h1 id = "title">Attendece Program</h1>
     </div>
   </div>
  </body>
