--- a/test/index.html
+++ b/test/index.html
@@ -2,8 +2,8 @@
 <body>
 <p id = ezra style = display:none;> Ezra</p>
 
-<button type="button" onclick="display()"Show Name</button>
-<button type="button" onclick="hide()"Hide Name</button>
+<button type="button" onclick="display()>"Show Name</button>
+<button type="button" onclick="hide()>"Hide Name</button>
 
 <script>
 function hide() {
