--- a/index.html
+++ b/index.html
@@ -1,5 +1,10 @@
 <html>
 <body>
-Develop, don't destroy!
+  <h2>Welcome to my website!</h2>
+  <p>My website currently a work in progress. To see some outline <a href= /sandbox/index.html>click here.</a>
+    To see documentation, goals, or to comment <a href = >click here.
+    <br>
+    thank you Daniel Farkas
+     </p>
 </body>
 </html>
