--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <body>
   <h2>Welcome to my website!</h2>
   <p>My website currently a work in progress. To see some outline <a href= /sandbox/index.html>click here.</a>
-    To see documentation, goals, or to comment <a href = >click here.
+    To see documentation, goals, or to comment <a href = https://github.com/daniel-farkas-dev/daniel-farkas-dev.github.io >click here.
     <br>
     thank you Daniel Farkas
      </p>
