--- a/index.html
+++ b/index.html
@@ -1,11 +1,18 @@
 <html>
+  <head>
+    <style>
+     #para{
+       backgrond-color:orange;
+      }
+    </style>
+  </head>
 <body>
   <h2>Welcome to my website!</h2>
-  <p>My website currently a work in progress. To see some outline <a href= /sandbox/index.html>click here.</a>
+  <p id = para>My website currently a work in progress. To see some outline <a href= /sandbox/index.html>click here.</a>
     To see documentation, goals, or to comment <a href = https://github.com/daniel-farkas-dev/daniel-farkas-dev.github.io >
     click here.</a>
     <br>
-    thank you Daniel Farkas
+    ,Thank you Daniel Farkas
      </p>
 </body>
 </html>
