--- a/sandbox/index.html
+++ b/sandbox/index.html
@@ -42,9 +42,9 @@
 </nav>
     </div>
 <p class="huge"> Take Attendence. </p>
-<img class="pic" src="http://www.mactesting.com/sub_students/photos/attendance2.jpg" alt="Attendence Sheet">
+<img class="pic" src="attendence-photo.jpg" alt="Attendence Sheet">
 <p class="huge"> Make Raffles. </p>
-<img class = "pic" src="http://p14cdn4static.sharpschool.com/UserFiles/Servers/Server_1949736/File/20192020/tickets.jpg" alt="huge pile of tickets">
+<img class = "pic" src="/tickets-photo.jpg" alt="huge pile of tickets">
 <p class="huge"> All from your phone. </p>
 <a  href="sign-in.html" class="btn btn-success huge" role="button">Start now</a>
   </div>
