--- a/sandbox/index.html
+++ b/sandbox/index.html
@@ -42,9 +42,9 @@
 </nav>
     </div>
 <p class="huge"> Take Attendence. </p>
-<img class="pic" src="attendence-photo.jpg" alt="Attendence Sheet">
+<img class="pic" src="attendence-photo.png" alt="Attendence Sheet">
 <p class="huge"> Make Raffles. </p>
-<img class = "pic" src="/tickets-photo.jpg" alt="huge pile of tickets">
+<img class = "pic" src="/tickets-photo.png" alt="huge pile of tickets">
 <p class="huge"> All from your phone. </p>
 <a  href="sign-in.html" class="btn btn-success huge" role="button">Start now</a>
   </div>
