--- a/sandbox/index.html
+++ b/sandbox/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <title>Attendence Program</title>
+  <title>Attendance Program</title>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css">
@@ -26,7 +26,7 @@
  <body>
   <div class = "jumbotron" style="height:1000vh;background-color:PaleTurquoise!important;">
     <div class ="container-fluid">
-      <h2 style="font-size:4em;">Attendence Program</h2>
+      <h2 style="font-size:4em;">Attandence Program</h2>
       <nav class="navbar navbar-expand-sm bg-success nav-pills fixed-top">
   <ul class="navbar-nav">
     <li class="nav-item">
@@ -41,8 +41,8 @@
   </ul>
 </nav>
     </div>
-<p class="huge"> Take Attendence. </p>
-<img class="pic" src="attendence-photo.png" alt="Attendence Sheet">
+<p class="huge"> Take Attendance. </p>
+<img class="pic" src="attendance-photo.png" alt="Attendance Sheet">
 <p class="huge"> Make Raffles. </p>
 <img class = "pic" src="tickets-photo.png" alt="huge pile of tickets">
 <p class="huge"> All from your phone. </p>
