--- a/sandbox/index.html
+++ b/sandbox/index.html
@@ -42,7 +42,7 @@
 </nav>
     </div>
 <p class="huge"> Take Attendance. </p>
-<img class="pic" src="attendance-photo.png" alt="Attendance Sheet">
+<img class="pic" src="attendence-photo.png" alt="Attendance Sheet">
 <p class="huge"> Make Raffles. </p>
 <img class = "pic" src="tickets-photo.png" alt="huge pile of tickets">
 <p class="huge"> All from your phone. </p>
