--- a/test.html
+++ b/test.html
@@ -1,5 +1,14 @@
 <html>
 <body>
-hi
+
+hi  hiiiiiiiii
+
+<p id="para">
+</p>
+<input type="text" id="itext" />
+<script>
+var x = document.getElementById("itext").value;
+document.getElementById("para").innerHTML =x;
+
 </body>
 </html>
