--- a/test.html
+++ b/test.html
@@ -6,9 +6,10 @@ hi  hiiiiiiiii
 <p id="para">
 </p>
 <input type="text" id="itext" />
-<script>
-var x = document.getElementById("itext").value;
-document.getElementById("para").innerHTML =x;
-
+  <script>
+    var x = document.getElementById("itext").value;
+    document.getElementById("para").innerHTML =x;
+  </script>
+  
 </body>
 </html>
