--- a/sandbox/form.html
+++ b/sandbox/form.html
@@ -128,7 +128,7 @@ hr {
 
 <div id="id01" class="modal">
   <span onclick="document.getElementById('id01').style.display='none'" class="close" title="Close Modal">&times;</span>
-  <form class="modal-content" method="get" action="validate.php">
+  <form class="modal-content" >
 
     <div class="container">
       <h1>Add new User</h1>
