--- a/sandbox/form.html
+++ b/sandbox/form.html
@@ -129,7 +129,7 @@ hr {
 
 <div id="id01" class="modal">
   <span onclick="document.getElementById('id01').style.display='none'" class="close" title="Close Modal">&times;</span>
-  
+  <div class= "modal-content">
     <div class="container">
       
       <h1>Add a New Attendee</h1>
@@ -159,7 +159,7 @@ hr {
       </div>
     </div>
 </div>
-
+  </div>
 <script>
 // Get the modal
 var modal = document.getElementById('id01');
