--- a/sandbox/form.html
+++ b/sandbox/form.html
@@ -182,7 +182,7 @@ window.onclick = function(event) {
   
   // Create an onSubmit function
   var onSubmit = function(){
-    atendee1Para.innerHtml= 'Name:' + lname.value + ', ' + fname.value + ' DOB:' +dob.value;
+    atendee1Para.innerHtml= "'Name:' + lname.value + ', ' + fname.value + ' DOB:' +dob.value";
   };
   
   // Running the function onClick
