--- a/sandbox/sign-in.html
+++ b/sandbox/sign-in.html
@@ -19,17 +19,19 @@
   <div class = "jumbotron"style="height:100vh;background-color:PaleTurquoise !important;">
     <div class="container-fluid">
       <h2 style="font-size:4em;">Attendence Program</h2>
-      <ul class="navbar navbar-expand-sm bg-success nav-pills fixed-top">
-        <li class="nav-item">
-          <a class="nav-link" href="index.html">Home</a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link" href="help.html">Help</a>
-        </li>
-        <li class="nav-item active">
-          <a class="nav-link active" href="sign-in.html">Sign In</a>
-        </li>
-      </ul>
+       <nav class="navbar navbar-expand-sm bg-success nav-pills fixed-top">
+  <ul class="navbar-nav">
+    <li class="nav-item">
+      <a class="nav-link active" href="index.html">Home</a>
+    </li>
+    <li class="nav-item">
+      <a class="nav-link" href="help.html">Help</a>
+    </li>
+    <li class="nav-item">
+      <a class="nav-link" href="sign-in.html">Sign In</a>
+  </li>
+  </ul>
+</nav>
       <h1 id = "title">Attendece Program</h1>
     </div>
   </div>
