--- a/sandbox/sign-in.html
+++ b/sandbox/sign-in.html
@@ -22,13 +22,13 @@
        <nav class="navbar navbar-expand-sm bg-success nav-pills fixed-top">
   <ul class="navbar-nav">
     <li class="nav-item">
-      <a class="nav-link active" href="index.html">Home</a>
+      <a class="nav-link" href="index.html">Home</a>
     </li>
     <li class="nav-item">
       <a class="nav-link" href="help.html">Help</a>
     </li>
     <li class="nav-item">
-      <a class="nav-link" href="sign-in.html">Sign In</a>
+      <a class="nav-link active" href="sign-in.html">Sign In</a>
   </li>
   </ul>
 </nav>
