--- a/sandbox/sign-in.html
+++ b/sandbox/sign-in.html
@@ -32,7 +32,7 @@
   </li>
   </ul>
 </nav>
-      <h1 id = "title">Attendece Program</h1>
+      <h1 id = "title">Attendence Program</h1>
     </div>
   </div>
  </body>
