--- a/sandbox/index.html
+++ b/sandbox/index.html
@@ -24,7 +24,7 @@
  <body>
   <div class = "jumbotron" style="height:1000vh;background-color:PaleTurquoise!important;">
     <div class ="container-fluid">
-      <h2 style="font-size:4em;">Attandence Program</h2>
+      <h2 style="font-size:4em;">Attandance Program</h2>
       <nav class="navbar navbar-expand-sm bg-success nav-pills fixed-top">
   <ul class="navbar-nav">
     <li class="nav-item">
