--- a/sandbox/sign-in.html
+++ b/sandbox/sign-in.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <title>Attendence Program | sign-in</title>
+  <title>Attendance Program | sign-in</title>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css">
@@ -18,7 +18,7 @@
  <body>
   <div class = "jumbotron"style="height:100vh;background-color:PaleTurquoise !important;">
     <div class="container-fluid">
-      <h2 style="font-size:4em;">Attendence Program</h2>
+      <h2 style="font-size:4em;">Attendance Program</h2>
        <nav class="navbar navbar-expand-sm bg-success nav-pills fixed-top">
   <ul class="navbar-nav">
     <li class="nav-item">
@@ -32,7 +32,8 @@
   </li>
   </ul>
 </nav>
-      <h1 id = "title">Attendence Program</h1>
+      <h1 id = "title">Attendance Program</h1>
+      <hr>
     </div>
   </div>
  </body>
