--- a/sandbox/sign-in.html
+++ b/sandbox/sign-in.html
@@ -34,6 +34,11 @@
 </nav>
       <h1 id = "title">Attendance Program</h1>
       <hr>
+      <div class = "bg-info txt-black">
+        <div class = "card-body"> 
+          I apoligize, but currently there are no options to sign in.
+          I hope to eventualy work with google and other platforms for signing in.
+        </div> </div>
     </div>
   </div>
  </body>
