--- a/sandbox/sign-in.html
+++ b/sandbox/sign-in.html
@@ -38,7 +38,7 @@
         <div class = "card-body"> 
           I apoligize, but currently there are no options to sign in.
           I hope to eventualy work with google and other platforms for signing in.
-          To continue to where you would go to after signing in, <a href = "/input.html"> click here. </a>
+          To continue to where you would go to after signing in, <a href = "/sandbox/input.html"> click here. </a>
         </div> </div>
     </div>
   </div>
