--- a/sandbox/index.html
+++ b/sandbox/index.html
@@ -2,8 +2,8 @@
 <html lang="en">
 <head>
   <title>Attendance Program</title>
-  <meta charset="utf-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css">
   
   <style media="screen">  </style>
