--- a/sandbox/programs.html
+++ b/sandbox/programs.html
@@ -5,5 +5,28 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   </head>
   <body>
+     // nav bar
+    <nav class="navbar navbar-expand-sm bg-success nav-pills fixed-top">
+  <ul class="navbar-nav">
+    <li class="nav-item">
+      <a class="nav-link active" href="program.html">Home</a>
+    </li>
+    <li class="nav-item">
+      <a class="nav-link" href="help.html">Help</a>
+    </li>
+    <li class="nav-item">
+      <button id="sign-out"> Sign Out </button>
+  </li>
+  </ul>
+   <hr>   
+</nav>
+    //No programs paragraph
+    <H1 id="no-pro-para"> You Currently Have No Programs <H1>
+    <script>
+      var pro-num = 0;
+      if (pro-num < 1) {
+        document.getElementById("no-pro-para").style.display = none;
+      }
+    </script>
   </body>
 </html>
