--- a/sandbox/programs.html
+++ b/sandbox/programs.html
@@ -21,7 +21,7 @@
    <hr>   
 </nav>
     //No programs paragraph
-    <H1 id="no-pro-para"> You Currently Have No Programs <H1>
+    <h1 id="no-pro-para"> You Currently Have No Programs </h1>
     <script>
       var pro-num = 0;
       if (pro-num < 1) {
