--- a/sandbox/programs.html
+++ b/sandbox/programs.html
@@ -4,9 +4,14 @@
    <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css">
+    <style>
+       #full-container{
+        background-color:lightSteelBlue;
+      }
+    </style>
   </head>
   <body>
-    <div class ="container">
+    <div class ="container" id = "full-container">
      // nav bar
     <nav class="navbar navbar-expand-sm bg-success nav-pills fixed-top">
   <ul class="navbar-nav">
