--- a/sandbox/programs.html
+++ b/sandbox/programs.html
@@ -11,7 +11,7 @@
     </style>
   </head>
   <body>
-    <div class ="container" id = "full-container">
+    <div class ="container p-3" id = "full-container">
      // nav bar
     <nav class="navbar navbar-expand-sm bg-success nav-pills fixed-top">
   <ul class="navbar-nav">
