--- a/sandbox/programs.html
+++ b/sandbox/programs.html
@@ -5,14 +5,15 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css">
     <style>
-       #full-container{
+       #full-jumbotron{
         background-color:lightSteelBlue;
       }
     </style>
   </head>
   <body>
-    <div class ="container p-3" id = "full-container">
-     // nav bar
+    <div class ="jumbotron" id = "full-jumbotron">
+     <div class ="container">
+      // nav bar
     <nav class="navbar navbar-expand-sm bg-success nav-pills fixed-top">
   <ul class="navbar-nav">
     <li class="nav-item">
@@ -29,6 +30,7 @@
 </nav>
     //No programs paragraph
     <h1 id="no-pro-para"> You Currently Have No Programs </h1>
+      </div>
     <script>
       var pro-num = 0;
       if (pro-num < 1) {
