--- a/sandbox/index.html
+++ b/sandbox/index.html
@@ -16,9 +16,6 @@
               {
                 font-size: 3em;
               }
-              .pic{
-                width:200px;
-              }
             </style>
 </head>
  <body>
@@ -40,9 +37,9 @@
 </nav>
     </div>
 <p class="huge"> Take Attendance. </p>
-<img class="pic" src="attendence-photo.png" alt="Attendance Sheet">
+<img class="pic img-fluid" src="attendence-photo.png" alt="Attendance Sheet">
 <p class="huge"> Make Raffles. </p>
-<img class = "pic" src="tickets-photo.png" alt="huge pile of tickets">
+<img class = "pic img-fluid" src="tickets-photo.png" alt="huge pile of tickets">
 <p class="huge"> All from your phone. </p>
 <a  href="sign-in.html" class="btn btn-success huge" role="button">Start now</a>
   </div>
