--- a/sandbox/index.html
+++ b/sandbox/index.html
@@ -16,6 +16,9 @@
               {
                 font-size: 3em;
               }
+            .pic
+            {
+              width:25vw;
             </style>
 </head>
  <body>
