--- a/sandbox/index.html
+++ b/sandbox/index.html
@@ -46,7 +46,52 @@
 <p class="huge"> All from your phone. </p>
 <a  href="sign-in.html" class="btn btn-success huge" role="button">Start now</a>
   </div>
-   // load bootstrap
+   filler <br>
+   filler <br> filler <br>
+   filler <br> filler <br>
+   filler <br> filler <br>
+   filler <br> filler <br>
+   filler <br> filler <br>
+   filler <br> filler <br>
+   filler <br> filler <br>
+   filler <br> filler <br>
+   filler <br> filler <br>
+   filler <br> filler <br>
+   filler <br> filler <br>
+   filler <br> filler <br>
+   filler <br> filler <br>
+   filler <br> filler <br>
+   filler <br> filler <br>
+   filler <br> filler <br>
+   filler <br> filler <br>
+   filler <br> filler <br>
+   filler <br> filler <br>
+   filler <br> filler <br>
+   filler <br> filler <br>
+   filler <br> filler <br>
+   filler <br> filler <br>
+   filler <br> filler <br>
+   filler <br> filler <br>
+   filler <br> filler <br>
+   filler <br> filler <br>
+   filler <br> filler <br>
+   filler <br> filler <br>
+   filler <br> filler <br>
+   filler <br> filler <br>
+   filler <br> filler <br>
+   filler <br> filler <br>
+   filler <br> filler <br>
+   filler <br> filler <br>
+   filler <br> filler <br>
+   filler <br> filler <br>
+   filler <br> filler <br>
+   filler <br> filler <br>
+   filler <br> filler <br>
+   filler <br> filler <br>
+   filler <br> filler <br>
+   filler <br> filler <br>
+   filler <br> filler <br>
+   filler <br>
    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js"></script>
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"></script>
