--- a/sandbox/index.html
+++ b/sandbox/index.html
@@ -22,7 +22,7 @@
             </style>
 </head>
  <body>
-  <div class = "jumbotron m-0" style="height:160vh;background-color:PaleTurquoise!important;">
+  <div class = "jumbotron m-0" style="background-color:PaleTurquoise!important;">
     <div class ="container-fluid">
       <h2 style="font-size:4em;">Attandance Program</h2>
       <nav class="navbar navbar-expand-sm bg-success nav-pills fixed-top">
