--- a/sandbox/index.html
+++ b/sandbox/index.html
@@ -23,9 +23,14 @@
 </head>
  <body>
   <div class = "jumbotron m-0" style="background-color:PaleTurquoise!important;">
+    
     <div class ="container-fluid">
       <h2 style="font-size:4em;">Attandance Program</h2>
-      <nav class="navbar navbar-expand-sm bg-success nav-pills fixed-top">
+      <nav class="navbar navbar-expand-sm bg-success">
+  <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#collapsibleNavbar">
+    <span class="navbar-toggler-icon"></span>
+  </button>
+  <div class="collapse navbar-collapse" id="collapsibleNavbar">
   <ul class="navbar-nav">
     <li class="nav-item">
       <a class="nav-link active" href="index.html">Home</a>
@@ -38,6 +43,7 @@
   </li>
   </ul>
 </nav>
+    </div>
     </div>
 <p class="huge"> Take Attendance. </p>
 <img class="pic " src="attendence-photo.png" alt="Attendance Sheet">
