--- a/sandbox/index.html
+++ b/sandbox/index.html
@@ -26,7 +26,7 @@
     
     <div class ="container-fluid">
       <h2 style="font-size:4em;">Attandance Program</h2>
-      <nav class="navbar navbar-expand-sm bg-success">
+      <nav class="navbar navbar-expand-sm bg-success fixed-top">
   <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#collapsibleNavbar">
     <span class="navbar-toggler-icon"></span>
   </button>
