--- a/sandbox/index.html
+++ b/sandbox/index.html
@@ -28,7 +28,7 @@
       <h2 style="font-size:4em;">Attandance Program</h2>
       <nav class="navbar navbar-expand-sm bg-success fixed-top">
   <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#collapsibleNavbar">
-   <i class="fa fa-car"></i>
+   <i class="fas fa-bars"></i>
   </button>
   <div class="collapse navbar-collapse" id="collapsibleNavbar">
   <ul class="navbar-nav">
@@ -52,7 +52,7 @@
 <p class="huge"> All from your phone. </p>
 <a  href="sign-in.html" class="btn btn-success huge" role="button">Start now</a>
   </div>
-  <i class="fa fa-car"></i>
+ 
    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js"></script>
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"></script>
