--- a/sandbox/index.html
+++ b/sandbox/index.html
@@ -28,7 +28,7 @@
       <h2 style="font-size:4em;">Attandance Program</h2>
       <nav class="navbar navbar-expand-sm bg-success fixed-top">
   <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#collapsibleNavbar">
-   <i class="fas fa-bars"></i>
+   <i class="fa fa-bars"></i>
   </button>
   <div class="collapse navbar-collapse" id="collapsibleNavbar">
   <ul class="navbar-nav">
