--- a/sandbox/index.html
+++ b/sandbox/index.html
@@ -25,8 +25,8 @@
   <div class = "jumbotron m-0" style="background-color:PaleTurquoise!important;">
     
     <div class ="container-fluid">
-      <h2 style="font-size:4em;">Attandance Program</h2>
-      <nav class="navbar navbar-expand-sm bg-success fixed-top m-1">
+      <h2 style="font-size:4em;" class="m1">Attandance Program</h2>
+      <nav class="navbar navbar-expand-sm bg-success fixed-top">
   <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#collapsibleNavbar">
    <i class="fa fa-bars"></i>
   </button>
