--- a/sandbox/index.html
+++ b/sandbox/index.html
@@ -16,9 +16,11 @@
               {
                 font-size: 3em;
               }
-            .pic
-            {
-              width:25vw;
+            @media only screen and (max-width: 600px) {.pic{width:50vh;}}
+            @media only screen and (min-width: 600px) {.pic{width:25vh;}}
+            @media only screen and (min-width: 768px) {.pic{width:25vh;}}
+            @media only screen and (min-width: 992px) {.pic{width:25vh;}}
+              @media only screen and (min-width: 1200px) {.pic{width:25vh;}}
             </style>
 </head>
  <body>
