--- a/sandbox/index.html
+++ b/sandbox/index.html
@@ -45,7 +45,7 @@
   </ul>
 </nav>
     </div>
-    <h2 style="font-size:4em;" class="mt1">Attandance Program</h2>
+    <h2 style="font-size:4em;" class="mt1">Attendance Program</h2>
 <p class="huge"> Take Attendance. </p>
 <img class="pic " src="attendence-photo.png" alt="Attendance Sheet">
 <p class="huge"> Make Raffles. </p>
