--- a/sandbox/index.html
+++ b/sandbox/index.html
@@ -21,6 +21,27 @@
             @media only screen and (min-width: 768px) {.pic{width:25vh;}}
             @media only screen and (min-width: 992px) {.pic{width:25vh;}}
               @media only screen and (min-width: 1200px) {.pic{width:25vh;}}
+           
+a:link {
+  color: DarkBlue;
+  text-decoration: underline;
+}
+ 
+a:visited {
+  color: DarkMagenta;
+  text-decoration: underline;
+}
+
+a:hover {
+  color:LightSlateGray
+  text-decoration: underline;
+}
+
+a:active {
+  color: #5cb85c
+  text-decoration: underline;
+}
+
             </style>
 </head>
  <body>
