--- a/sandbox/index.html
+++ b/sandbox/index.html
@@ -33,12 +33,12 @@ a:visited {
 }
 
 a:hover {
-  color:LightSlateGray
+  color:LightSlateGray;
   text-decoration: underline;
 }
 
 a:active {
-  color: #5cb85c
+  color: #5cb85c;
   text-decoration: underline;
 }
 
@@ -74,6 +74,7 @@ a:active {
 <p class="huge"> All from your phone. </p>
 <a  href="sign-in.html" class="btn btn-success huge" role="button">Start now</a>
   </div>
+   </div>
  
    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js"></script>
