--- a/mothers-surprise.html
+++ b/mothers-surprise.html
@@ -1,1 +1,12 @@
-<iframe width="560" height="315" src="https://www.youtube.com/embed/wC1mQgVG0Pc" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+<html>
+  <head>
+    <style>
+      .video{
+        width="100vh"
+      }
+    </style>
+  </head>
+<body>
+<iframe class="video" src="https://www.youtube.com/embed/wC1mQgVG0Pc" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+  </body>
+  </html>
