--- a/mothers-surprise.html
+++ b/mothers-surprise.html
@@ -2,11 +2,11 @@
   <head>
     <style>
       .video{
-        width="100vw"
+        width:100vw;
       }
     </style>
   </head>
 <body>
-<iframe class="video" src="https://www.youtube.com/embed/wC1mQgVG0Pc" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+<iframe class="video"src="https://www.youtube.com/embed/wC1mQgVG0Pc" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
   </body>
   </html>
