--- a/mothers-surprise.html
+++ b/mothers-surprise.html
@@ -8,6 +8,6 @@
     </style>
   </head>
 <body>
-<iframe class="video"src="https://www.youtube.com/embed/wC1mQgVG0Pc" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+<iframe class="video"src="https://www.youtube.com/embed/wC1mQgVG0Pc?t=1" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
   </body>
   </html>
