--- a/mothers-surprise.html
+++ b/mothers-surprise.html
@@ -8,7 +8,7 @@
     </style>
   </head>
 <body>
-  <video autoplay>
+  <video controls>
   <source src="Presentation 1.mp4" type="video/mp4">
 Your browser does not support the video tag.
 </video>
