--- a/mothers-surprise.html
+++ b/mothers-surprise.html
@@ -8,8 +8,8 @@
     </style>
   </head>
 <body>
-  <video controls>
-  <source src="Presentation 1.mp4" type="video/mp4">
+  <video controls class="video">
+  <source src="surprise-video.ogg" type="video/ogg">
 Your browser does not support the video tag.
 </video>
   </body>
