--- a/mothers-surprise.html
+++ b/mothers-surprise.html
@@ -9,7 +9,7 @@
   </head>
 <body>
   <video controls class="video">
-  <source src="surprise-video.ogg" type="video/ogg">
+  <source src="surprise-video.mp4" type="video/mp4">
 Your browser does not support the video tag.
 </video>
   </body>
