--- a/mothers-surprise.html
+++ b/mothers-surprise.html
@@ -8,9 +8,19 @@
     </style>
   </head>
 <body>
-  <video controls class="video">
+  <video id="video" controls class="video">
   <source src="surprise-video.mp4" type="video/mp4">
 Your browser does not support the video tag.
 </video>
+  <h1 id ="demo"></h1>
+  <script>
+var video = document.getElementById("video");
+    
+video.onended = function() {myFunction()};
+function myFunction() {
+  video.remove();
+  document.getElementById("demo").innerHTML = "Happy Mothers day.";
+}
+</script>
   </body>
   </html>
