--- a/mothers-surprise.html
+++ b/mothers-surprise.html
@@ -16,7 +16,7 @@
 Your browser does not support the video tag.
 </video>
   <h1 id ="head"></h1>
-  <h2 id ="credit>>/h2>
+  <h2 id ="credit></h2>
   <script>
 var video = document.getElementById("video");
     
