--- a/mothers-surprise.html
+++ b/mothers-surprise.html
@@ -26,9 +26,10 @@ video.onended = function() {myFunction()};
 function myFunction() {
   video.remove();
   document.getElementById("head").innerHTML = "Happy Mothers day.";
+   document.getElementById("credit").innerHTML = "From the three brothers.";                                                                
 }
 </script>
-}
+
 </script>
   </body>
   </html>
