--- a/mothers-surprise.html
+++ b/mothers-surprise.html
@@ -5,7 +5,7 @@
         width:100vw;
         height:100vh;
       }
-      #demo{
+      #head, #credit {
        text-align: center;
       }
     </style>
@@ -17,8 +17,7 @@ Your browser does not support the video tag.
 </video>
   <h1 id ="head"></h1>
   <h2 id ="credit></h2>
-  <script>
- <h1 id ="demo"></h1>
+ 
   <script>
 var video = document.getElementById("video");
 
@@ -28,8 +27,6 @@ function myFunction() {
   document.getElementById("head").innerHTML = "Happy Mothers day.";
    document.getElementById("credit").innerHTML = "From the three brothers.";                                                                
 }
-</script>
-
 </script>
   </body>
   </html>
