--- a/mothers-surprise.html
+++ b/mothers-surprise.html
@@ -24,8 +24,7 @@ var video = document.getElementById("video");
 video.onended = function() {myFunction()};
 function myFunction() {
   video.remove();
-  document.getElementById("head").innerHTML = "Happy Mothers day.";
-   document.getElementById("credit").innerHTML = "From the three brothers.";                                                                
+  document.getElementById("demo").innerHTML = "Happy Mothers day.";
 }
 </script>
   </body>
