--- a/mothers-surprise.html
+++ b/mothers-surprise.html
@@ -25,6 +25,7 @@ video.onended = function() {myFunction()};
 function myFunction() {
   video.remove();
   document.getElementById("demo").innerHTML = "Happy Mothers day.";
+  document.getElementById("credit").innerHTML = "From the three brothers.";
 }
 </script>
   </body>
