--- a/mothers-surprise.html
+++ b/mothers-surprise.html
@@ -15,8 +15,8 @@
   <source src="surprise-video.mp4" type="video/mp4">
 Your browser does not support the video tag.
 </video>
-  <h1 id ="head"></h1>
-  <h2 id ="credit"></h2>
+  <h1 id ="head">""</h1>
+  <h2 id ="credit">""</h2>
  
   <script>
 var video = document.getElementById("video");
