--- a/index.html
+++ b/index.html
@@ -1,18 +1,28 @@
 <html>
   <head>
+      <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css">
+      <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+
     <style>
      #para{
        backgrond-color:orange;
       }
     </style>
   </head>
+  
 <body>
-  <h2>Welcome to my website!</h2>
-  <p id = para>My website currently a work in progress. To see some outline <a href= /sandbox/index.html>click here.</a>
+  <div class="container-fluid bg-info text-dark"> //container
+   <h2>Welcome to my website!</h2>
+   <p id = para>My website currently a work in progress. To see some outline <a href= /sandbox/index.html>click here.</a>
     To see documentation, goals, or to comment <a href = https://github.com/daniel-farkas-dev/daniel-farkas-dev.github.io >
     click here.</a>
     <br>
     ,Thank you Daniel Farkas
      </p>
+    
+    //bs4 scripts
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js"></script>
+  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"></script>
 </body>
 </html>
