--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
   </head>
   
 <body>
-  <div class="container-fluid bg-info text-dark"> //container
+  <div class="container-fluid bg-info text-dark"> <!--container-->
    <h2>Welcome to my website!</h2>
    <p id = para>My website currently a work in progress. To see some outline <a href= /sandbox/index.html>click here.</a>
     To see documentation, goals, or to comment <a href = https://github.com/daniel-farkas-dev/daniel-farkas-dev.github.io >
@@ -20,7 +20,7 @@
     ,Thank you Daniel Farkas
      </p>
     
-    //bs4 scripts
+    <!--bs4 scripts-->
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js"></script>
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"></script>
