--- a/index.html
+++ b/index.html
@@ -11,15 +11,16 @@
   </head>
   
 <body>
-  <div class="container-fluid bg-info text-dark"> <!--container-->
-   <h2>Welcome to my website!</h2>
-   <p id = para>My website currently a work in progress. To see some outline <a href= /sandbox/index.html>click here.</a>
-    To see documentation, goals, or to comment <a href = https://github.com/daniel-farkas-dev/daniel-farkas-dev.github.io >
+  <div class="container-fluid bg-info text-dark text-center" style="height: 100vh;"> <!--container-->
+   <h1 class="display-1">Welcome to my website!</h1>
+   <p id = "para">My website currently a work in progress. To see some outline 
+	   <a class ="text-warning" href= "/sandbox/index.html">click here.</a>
+    To see documentation, goals, or to comment 
+	   <a class ="text-warning" href ="https://github.com/daniel-farkas-dev/daniel-farkas-dev.github.io">
     click here.</a>
-    <br>
-    ,Thank you Daniel Farkas
-     </p>
     
+     </p>
+	</div>
     <!--bs4 scripts-->
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js"></script>
