--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 <body>
   <div class="container-fluid bg-info text-dark text-center" style="height: 100vh;"> <!--container-->
    <h1 class="display-1">Welcome to my website!</h1>
-   <p id = "para">My website currently a work in progress. To see some outline 
+   <p id = "para">My website is currently a work in progress. To see some outline 
 	   <a class ="text-warning" href= "/sandbox/index.html">click here.</a>
     To see documentation, goals, or to comment 
 	   <a class ="text-warning" href ="https://github.com/daniel-farkas-dev/daniel-farkas-dev.github.io">
