--- a/local_storage.html
+++ b/local_storage.html
@@ -29,7 +29,7 @@
 		 
 		  if (typeof(Storage) !== "undefined") {
   			localStorage.setItem("person_array", person_array);
-			document.getElementById("button").innerHTML = "Code ran";
+			document.getElementById("button").innerHTML = person_array;
 		 } else {
 			console.log("Get a browser from after 2010");
 		 }
