--- a/local_storage.html
+++ b/local_storage.html
@@ -25,7 +25,7 @@
 		  var person_2 = new Person("Daniel", "Doe", 45);
 		  var person_3 = new Person("Ezra", "Doe", 21);
 		  
-		  person_array = [person_1, person_2, person_3]; 
+		  var person_array = [person_1, person_2, person_3]; 
 		 
 		  if (typeof(Storage) !== "undefined") {
   			localStorage.setItem("person_array", person_array);
