--- a/Card Stack/card_layout.html
+++ b/Card Stack/card_layout.html
@@ -8,7 +8,7 @@
 <title>Local Storage Test</title>
 
 <!-- Bootstrap -->
-<link href="css/bootstrap-4.4.1.css" rel="stylesheet">
+<link href="../css/bootstrap-4.4.1.css" rel="stylesheet">
 </head>
     
 <body>
@@ -47,8 +47,8 @@
    </div>
 </div>
     
-<script src="js/jquery-3.4.1.min.js"></script> 
-<script src="js/popper.min.js"></script> 
-<script src="js/bootstrap-4.4.1.js"></script>
+<script src="../js/jquery-3.4.1.min.js"></script> 
+<script src="../js/popper.min.js"></script> 
+<script src="../js/bootstrap-4.4.1.js"></script>
 </body>
 </html>
