moved event listener to object

--- a/Card Stack/card_layout.html
+++ b/Card Stack/card_layout.html
@@ -16,7 +16,7 @@
 <div class = "card-deck text-center">
    
     
-    <div class = "card" data-present = "absent">
+    <div class = "card" data-present = "absent" id="og-card">
       <h5 class="card-header bg-secondary">Daniel Farkas</h5>
       <div class="card-body">
          <p class="card-text">YOB:2007 <br/> Times Came: 7</p>
